--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,8 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.2.0",
     "axios": "^1.13.5",
+    "chart.js": "^4.5.1",
+    "framer-motion": "^12.34.3",
+    "lucide-react": "^0.575.0",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.2.0",
     "toastify": "^2.0.1"
   },
