--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,9 +19,11 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.7.0",
     "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.2.0",
